<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#06000E"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="#454545"
    android:padding="8dp"

    app:cardCornerRadius="8dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/domestic_violence_laws"
        android:gravity="center"
        android:textColor="#00baf3"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"

        android:padding="15dp"
        android:text="@string/read_more_article"
        />

</androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textColor="#00baf3"

        android:backgroundTint="#454545"
        app:cardCornerRadius="8dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helplines"
            android:textColor="#00baf3"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:text="@string/emergency_contacts"
            android:textColor="#FFFFFF"


            />

    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:backgroundTint="#454545"
            app:cardCornerRadius="8dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_resources"
                android:gravity="center"
                android:textColor="#00baf3"
                android:textStyle="bold"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:textColor="#FFFFFF"

                android:text="@string/women_websites"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="#454545"
            app:cardCornerRadius="8dp"
            android:padding="8dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/answer_a_few_questions" />
                android:textColor="#00baf3"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="ANSWER A FEW QUESTIONS" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:textColor="#FFFFFF"

                android:layout_marginBottom="15dp"
                android:text="@string/determine_domestic_violence" />

            <Button
                android:id="@+id/survey_button"
                android:layout_width="wrap_content"
                android:layout_margin="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="600dp"
                android:text="@string/survey_button"
                android:background="#00baf3"
                android:padding="5dp"

                android:textColor="#000000"
                android:textStyle="bold"
                 />
</LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>