<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="0dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_my_travel"
            android:layout_gravity="center"
            >

        </TextView>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#25262B">

        <EditText
            android:id="@+id/place_search"
            android:hint="@string/tmt_destination"
            android:inputType="textPostalAddress"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"

            android:padding="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:backgroundTint="#ffffff"/>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/submit_destination" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/places_recycler_view"
        android:background="#25262B"
        android:orientation="vertical"
        android:padding="10dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>