<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".Activities.UnsafeRegion">

        <fragment
            android:id="@+id/mapsUnsafe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="match_parent">

        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="16dp"
            android:background="@drawable/round_bottom_false"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="You are heading in unsafe zone"
                android:layout_margin="16dp"
                android:textSize="22sp"
                android:textStyle="bold"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"/>
            <Button

                android:background="@drawable/button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_marginStart="16dp"
                android:onClick="nearestRoute"
                android:layout_marginEnd="16dp"
                android:text="@string/directions_to_nearest_route"
                />

            <Button
                android:textColor="#ffffff"
                android:background="@drawable/button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/raise_an_emergency_call"
                />
            <Button
                android:textColor="#ffffff"
                android:onClick="raiseSOS"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/connect_to_a_family_member"
                />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>